Fix CLI unified patch byte handling
Co-authored-by: carstenartur <3164220+carstenartur@users.noreply.github.com>